--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -27,3 +27,7 @@
   outline: none;
   box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5); /* Focus ring */
 }
+
+.i-box-shadow {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px -1px 8px;
+}
